# pulsefolio

./: .gitignore  .vercelignore  AGENTS.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml  profitcheck.yml
agents/: cicd-specialist.md  profitcheck.md  project-manager.md  senior-architect.md  senior-design-reviewer.md  senior-developer.md  tester.md
apps/ios/: README.md  project.yml
apps/web/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: agent-workflow-log.md
docs/agents/: profitcheck-automation.md
docs/architecture/: ADR-001-stack.md  ADR-002-cloud.md  ADR-003-risk.md  cloud-provisioning.md  db-schema.md  openapi.yaml  render-deploy.md
infra/: railway.toml
scripts/: dev-setup.sh  dev-start.sh  ios-device-run.sh  ios-run.sh  ios-setup.sh  ios-strip-mockup-text.py  profitcheck.py  smoke-test.sh
services/api/: .env.example  pyproject.toml  requirements.txt
services/api/app/: __init__.py  auth.py  config.py  database.py  main.py  seed.py
services/api/app/models/: __init__.py
services/api/app/routers/: ai.py  auth.py  dashboard.py  me.py  portfolio.py  settings.py  stream.py  trades.py
services/api/app/schemas/: __init__.py
services/api/app/services/: ai.py  auto_trader.py  dashboard_views.py  market_data.py  ollama.py  portfolio_metrics.py  rate_limit.py  risk.py  simulation.py  trades.py  websocket.py
services/api/tests/: conftest.py  test_api.py  test_auto_trader.py  test_profitcheck_script.py  test_render_config.py
(+251 files in other folders)
